Fix text overflow (#115)

--- a/web/src/sass/_responsive.scss
+++ b/web/src/sass/_responsive.scss
@@ -31,6 +31,7 @@
 
     p {
       text-align: center;
+      max-width: none !important;
     }
 
     h1,
@@ -40,6 +41,7 @@
     h5,
     h6 {
       text-align: center;
+      max-width: none !important;
     }
   }
 }
